--- a/packages/fujitsu-fep/charts/Chart.yaml
+++ b/packages/fujitsu-fep/charts/Chart.yaml
@@ -4,7 +4,7 @@ annotations:
 apiVersion: v2
 appVersion: 1.0.001-ga
 description: Helm Chart for Installation of Fujitsu Enterprise Postgres Operator
-icon: https://partner-charts.rancher.io/assets/logos/fujitsu-fep.png
+icon: https://https://github.com/fujitsuaustraliasoftwaretechnology/partner-charts/tree/main-source/assets/logos/fujitsu-fep.png
 keywords:
 - postgres
 - postgresql
